[gd_scene load_steps=5 format=3 uid="uid://cs7ydd6a5li1d"]

[ext_resource type="Texture2D" uid="uid://ew6230vp0c2b" path="res://Sprites/Elementos/zarzal/front1.png" id="1_kj0nm"]
[ext_resource type="Script" uid="uid://cpgkfj1vvnkd5" path="res://Scripts/Elementos/zarza.gd" id="1_mijvv"]
[ext_resource type="Texture2D" uid="uid://b3h30l0l32lj4" path="res://Sprites/Elementos/zarzal/back1.png" id="2_mijvv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwceu"]
size = Vector2(45, 59)

[node name="zarza" type="StaticBody2D"]
script = ExtResource("1_mijvv")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(24, 32)
texture = ExtResource("1_kj0nm")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 33)
shape = SubResource("RectangleShape2D_uwceu")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(24, 32)
texture = ExtResource("2_mijvv")

[node name="damage" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="damage" to="." method="_on_timer_timeout"]
